@@ -1,26 +1,0 @@
-#!/bin/bash
-
-##
-## This file is part of the Score-P software (http://www.score-p.org)
-##
-## Copyright (c) 2009-2011,
-##    RWTH Aachen University, Germany
-##    Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
-##    Technische Universitaet Dresden, Germany
-##    University of Oregon, Eugene, USA
-##    Forschungszentrum Juelich GmbH, Germany
-##    German Research School for Simulation Sciences GmbH, Juelich/Aachen, Germany
-##    Technische Universitaet Muenchen, Germany
-##
-## See the COPYING file in the package base directory for details.
-##
-
-## file       run_omp_tasks.sh
-
-
-SCOREP_ENABLE_PROFILING=false SCOREP_ENABLE_TRACING=true ./omp_tasks
-if [ $? -ne 0 ]; then
-    rm -rf scorep-measurement-tmp
-    exit 1
-fi
-exit 0
